@@ -26,16 +26,18 @@ import io.gravitee.repository.exceptions.TechnicalException;
 import io.gravitee.repository.management.api.OrganizationRepository;
 import io.gravitee.repository.management.model.Organization;
 import io.gravitee.repository.management.model.flow.FlowReferenceType;
+import io.gravitee.rest.api.model.EnvironmentEntity;
+import io.gravitee.rest.api.model.EventType;
 import io.gravitee.rest.api.model.OrganizationEntity;
 import io.gravitee.rest.api.model.UpdateOrganizationEntity;
+import io.gravitee.rest.api.service.EnvironmentService;
 import io.gravitee.rest.api.service.EventService;
 import io.gravitee.rest.api.service.RoleService;
+import io.gravitee.rest.api.service.common.GraviteeContext;
 import io.gravitee.rest.api.service.configuration.flow.FlowService;
-import io.gravitee.rest.api.service.impl.OrganizationServiceImpl;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import org.junit.After;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
@@ -66,22 +68,44 @@ public class OrganizationService_CreateTest {
     private EventService eventService;
 
     @Mock
+    private EnvironmentService environmentService;
+
+    @Mock
     private ObjectMapper mapper;
+
+    @Before
+    public void setup() {
+        GraviteeContext.setCurrentOrganization("orgid");
+    }
+
+    @After
+    public void tearDown() {
+        GraviteeContext.cleanContext();
+    }
 
     @Test
     public void shouldCreateOrganization() throws TechnicalException {
         when(mockOrganizationRepository.findById(any())).thenReturn(Optional.empty());
 
         UpdateOrganizationEntity org1 = new UpdateOrganizationEntity();
-        org1.setHrids(Arrays.asList("orgid"));
+        org1.setHrids(List.of("orgid"));
         org1.setName("org_name");
         org1.setDescription("org_desc");
         List<String> domainRestrictions = Arrays.asList("domain", "restriction");
         org1.setDomainRestrictions(domainRestrictions);
-        org1.setFlows(Arrays.asList());
+        org1.setFlows(List.of());
 
         Organization createdOrganization = new Organization();
         createdOrganization.setId("org_id");
+
+        EnvironmentEntity env1 = new EnvironmentEntity();
+        env1.setId("env_1");
+
+        EnvironmentEntity env2 = new EnvironmentEntity();
+        env2.setId("env_2");
+
+        when(environmentService.findByOrganization(createdOrganization.getId())).thenReturn(List.of(env1, env2));
+
         when(mockOrganizationRepository.create(any())).thenReturn(createdOrganization);
         when(mockFlowService.findByReference(FlowReferenceType.ORGANIZATION, "org_id")).thenReturn(new ArrayList<>());
 
@@ -102,6 +126,8 @@ public class OrganizationService_CreateTest {
         verify(mockRoleService, times(1)).initialize("org_id");
         verify(mockRoleService, times(1)).createOrUpdateSystemRoles("org_id");
         verify(mockFlowService, times(1)).save(FlowReferenceType.ORGANIZATION, "org_id", Arrays.asList());
+        verify(eventService, times(1))
+            .create(eq(Set.of("env_1", "env_2")), eq(EventType.PUBLISH_ORGANIZATION), any(), eq(Map.of("organization_id", "org_id")));
     }
 
     @Test
@@ -121,6 +147,14 @@ public class OrganizationService_CreateTest {
         when(mockOrganizationRepository.update(any())).thenReturn(createdOrganization);
         when(mockFlowService.findByReference(FlowReferenceType.ORGANIZATION, "org_id")).thenReturn(org1.getFlows());
 
+        EnvironmentEntity env1 = new EnvironmentEntity();
+        env1.setId("env_1");
+
+        EnvironmentEntity env2 = new EnvironmentEntity();
+        env2.setId("env_2");
+
+        when(environmentService.findByOrganization(createdOrganization.getId())).thenReturn(List.of(env1, env2));
+
         OrganizationEntity organization = organizationService.createOrUpdate("org_id", org1);
 
         assertNotNull("result is null", organization);
@@ -138,5 +172,7 @@ public class OrganizationService_CreateTest {
         verify(mockRoleService, never()).initialize("org_id");
         verify(mockRoleService, never()).createOrUpdateSystemRoles("org_id");
         verify(mockFlowService, times(1)).save(FlowReferenceType.ORGANIZATION, "org_id", org1.getFlows());
+        verify(eventService, times(1))
+            .create(eq(Set.of("env_1", "env_2")), eq(EventType.PUBLISH_ORGANIZATION), any(), eq(Map.of("organization_id", "org_id")));
     }
 }
